src/objects/sdfs__FormulaShare_Targeted_Job__mdt.object
<CustomObject>
    <fields>
        <fullName>sdfs__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sdfs__Allow_Processing_in_Parallel__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Allow Processing in Parallel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sdfs__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sdfs__Filter_Condition__c</fullName>
        <label>Filter Condition</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>True</fullName>
                    <default>true</default>
                    <label>True</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sdfs__Filter_Field__c</fullName>
        <inlineHelpText>Job will filter to records where this field is true. Should be set to a checkbox formula or checkbox field</inlineHelpText>
        <label>Filter Field</label>
        <metadataRelationshipControllingField>sdfs__FormulaShare_Targeted_Job__mdt.sdfs__Object__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>FormulaShare_Targeted_Jobs</relationshipLabel>
        <relationshipName>FormulaShare_Targeted_Jobs</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>sdfs__Object__c</fullName>
        <label>Object</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>FormulaShare_Targeted_Jobs</relationshipLabel>
        <relationshipName>FormulaShare_Targeted_Jobs</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>sdfs__Schedule_Base__c</fullName>
        <label>Schedule Base</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Minutes</fullName>
                    <default>true</default>
                    <label>Minutes</label>
                </value>
                <value>
                    <fullName>Hours</fullName>
                </value>
                <value>
                    <fullName>Days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sdfs__Schedule_Frequency__c</fullName>
        <label>Schedule Frequency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>FormulaShare Targeted Job</label>
    <pluralLabel>FormulaShare Targeted Jobs</pluralLabel>
</CustomObject>